--- a/index.html
+++ b/index.html
@@ -13,15 +13,10 @@
           <a href="./index.html" class="logo-head"
             >Burger<span class="logo-head-second">Club</span></a
           >
-          <ul style="list-style-type: none" class="head-page">
-            <li>
-              <a href="./index.html" class="link-head current">Studio</a>
-            </li>
-            <li><a href="" class="link-head">Portfolio</a></li>
-            <li><a href="" class="link-head">Contacts</a></li>
-          </ul>
+          <button type="button" class="button-burgers">BURGERS</button>
         </nav>
-        <address class="addres-class">
+        <button type="button" class="button-drinks">DRINKS</button>
+        <!-- <address class="addres-class">
           <ul style="list-style-type: none" class="contacts">
             <li>
               <a href="mailto:info@devstudio.com" class="my-contacts"
@@ -34,7 +29,7 @@
               >
             </li>
           </ul>
-        </address>
+        </address> -->
         <!-- <button class="open-menu-btn" type="button">
           <svg width="24" height="24">
             <use href="./images/icons.svg#icon-Group-1"></use>
@@ -49,7 +44,7 @@
       </video>
     </div>
     <div class="content">
-      <h1 class="burger">Burger Club</h1>
+      <h1 class="burger"></h1>
       <p></p>
     </div>
   </body>
