--- a/index.html
+++ b/index.html
@@ -10,31 +10,20 @@
     <header class="header-styles">
       <div class="container header-container">
         <nav class="nav-style">
+          <button id="openModal" type="button" class="button-drinks">
+            BURGERS
+          </button>
+          <button id="openROLLSS" type="button" class="button-drinks">
+            ROLLS
+          </button>
+          <button type="button" class="button-drinks">SNACKS</button>
           <a href="./index.html" class="logo-head"
             >Burger<span class="logo-head-second">Club</span></a
           >
-          <button type="button" class="button-burgers">BURGERS</button>
+          <button type="button" class="button-burgers">DRINKS</button>
         </nav>
-        <button type="button" class="button-drinks">DRINKS</button>
-        <!-- <address class="addres-class">
-          <ul style="list-style-type: none" class="contacts">
-            <li>
-              <a href="mailto:info@devstudio.com" class="my-contacts"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+110001111111" class="my-contacts"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address> -->
-        <!-- <button class="open-menu-btn" type="button">
-          <svg width="24" height="24">
-            <use href="./images/icons.svg#icon-Group-1"></use>
-          </svg>
-        </button> -->
+        <button type="button" class="button-drinks">HOT DRINKS</button>
+        <button type="button" class="button-drinks">DESERTS</button>
       </div>
     </header>
     <div class="video-background">
@@ -47,5 +36,54 @@
       <h1 class="burger"></h1>
       <p></p>
     </div>
+    <!-- Модальное окно -->
+    <div id="myModal" class="modal">
+      <!-- Контент модального окна -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img width="1000px" height="500px" src="./photo/burgers.jpg" />
+      </div>
+    </div>
+    <div id="ROLLSS" class="modal">
+      <!-- Контент модального окна -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img
+          width="1000px"
+          height="500px"
+          src="./photo/Роллы-Салаты--950х500-.jpg"
+        />
+      </div>
+    </div>
+    <div id="myModal" class="modal">
+      <!-- Контент модального окна -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img width="1000px" height="500px" src="./photo/burgers.jpg" />
+      </div>
+    </div>
+    <div id="myModal" class="modal">
+      <!-- Контент модального окна -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img width="1000px" height="500px" src="./photo/burgers.jpg" />
+      </div>
+    </div>
+    <div id="myModal" class="modal">
+      <!-- Контент модального окна -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img width="1000px" height="500px" src="./photo/burgers.jpg" />
+      </div>
+    </div>
+    <div id="myModal" class="modal">
+      <!-- Контент модального окна -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img width="1000px" height="500px" src="./photo/burgers.jpg" />
+      </div>
+    </div>
+
+    <script src="./modalki.js"></script>
   </body>
 </html>
